Configured first stage of the database, added migrations

--- a/EventWorld.Web/appsettings.json
+++ b/EventWorld.Web/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "EventWorldConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=EventWorldDatabase;User Id=internship;Integrated Security=false;Trusted_Connection=false;"
+    "EventWorldConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=EventWorldDatabase; Integrated Security=false;Trusted_Connection=false;"
   },
   "AllowedHosts": "*"
 }
